2004-12-28  Andrew Pinski  <pinskia@physics.uc.edu>

	* fold-const.c (fold_build_cleanup_point_expr): For a RETURN_EXPR,
	we only need a cleanup point expression when the expression on the
	left hand side of the MODIFIY_EXPR inside the return has side
	effects.

2004-12-28  Dorit Naishlos  <dorit@il.ibm.com>

	* tree-vectorizer.c (vect_mark_relevant) First argument changed from
	varray_type to varray_type*.
	(vect_mark_stmts_to_be_vectorized): Pass &worklist instead of worklist
	when calling vect_mark_relevant.

2004-12-28  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Don't
	generate non-offsettable DImode lo_sum addresses.

2004-12-28  Zdenek Dvorak  <dvorakz@suse.cz>

	PR rtl-optimization/19103
	* loop-iv.c (iv_number_of_iterations): Fix typo.

2004-12-28  Andreas Jaeger  <aj@suse.de>

	* genrecog.c (compute_predicate_codes): Avoid warning.

2004-12-27 John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* vax.c (vax_address_cost, vax_rtx_cost): Correct casts.
	(vax_rtx_cost): Handle small offsets for both PLUS and MINUS.

2004-12-27  Jeff Law  <law@redhat.com>

	* tree-ssa-dom.c (thread_across_edge): Remove broken code to
	avoid threading into a loop.

2004-12-27  Richard Henderson  <rth@redhat.com>

	PR target/17406
	* config/i386/i386.c (ix86_expand_prologue): Add REG_FRAME_RELATED_EXPR
	note for allocate_stack_worker insn.

2004-12-27  Jason Merrill  <jason@redhat.com>

	* doc/tm.texi (TARGET_RELAXED_ORDERING): Document.
	* target.h (struct gcc_target): Add relaxed_ordering field.
	* target-def.h (TARGET_RELAXED_ORDERING): Define default.
	(TARGET_INITIALIZER): Add it.
	* config/alpha/alpha.c (TARGET_RELAXED_ORDERING): Define.
	* config/ia64/ia64.c (TARGET_RELAXED_ORDERING): Define.
	* config/rs6000/rs6000.c (TARGET_RELAXED_ORDERING): Define.
	* config/sparc/sparc.c (TARGET_RELAXED_ORDERING): Define.

2004-12-27  Roger Sayle  <roger@eyesopen.com>

	PR driver/16118